[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
maud = "0.25.0"
rscx = { path = "../rscx" }

[[bench]]
name = "benchmark"
harness = false

[dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
horrorshow = "0.8.4"
html-node = "0.2.3"
leptos = { version = "0.5.0-beta2", features = ["ssr"] }
tokio = "1.32.0"
