[package]
name = "rscx"
version = { workspace = true }
edition = "2021"
authors = ["Antonio Pitasi"]
license = "MIT"
repository = "https://github.com/pitasi/rscx"
description = "rscx is a HTML templating library for Rust with a JSX-like syntax."
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscx-macros = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
typed-builder = "0.16.0"

