[package]
name = "rscx"
version = { workspace = true }
edition = "2021"
authors = ["Antonio Pitasi"]
license = "MIT"
repository = "https://github.com/pitasi/rscx"
description = "rscx is a HTML templating library for Rust with a JSX-like syntax."
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"], optional = true }
html-escape = "0.2.13"
rscx-macros = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["rt"], optional = true }
typed-builder = "0.16.0"

[features]
default = []
axum = ["dep:axum", "dep:tokio-util"]
