[package]
name = "website"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
csm = { git = "https://github.com/Pitasi/csm", version = "0.1.0" }
rscx = "0.1.9"
rscx-mdx = { version = "0.1.5" }
tokio = { version = "1.32.0", features = ["full"] }
